--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
 	"name": "educentral",
 	"version": "0.0.0",
 	"license": "MIT",
+	"engines": {
+		"node": "8.3.1",
+		"npm": "5.1.0"
+	},
 	"scripts": {
 		"start": "npm run clean && npm run start:all",
 		"start:all": "run-p \"start:server\" \"start:client\"",
